--- a/pages/index.css
+++ b/pages/index.css
@@ -47,18 +47,13 @@
 @import url(../blocks/footer/__email/footer__email.css);
 @import url(../blocks/footer/__copy-right/footer__copy-right.css);
 @import url(../blocks/footer/__logo-image/footer__logo-image.css);
-
+/* ! модификаторы тёмной темы */
 @import url(../blocks/footer/_dark/footer_dark.css);
 @import url(../blocks/footer/__email/_dark/footer__email_dark.css);
 @import url(../blocks/footer/__copy-right/_dark/footer__copy-right_dark.css);
 @import url(../blocks/footer/__title/_dark/footer__title_dark.css);
 @import url(../blocks/footer/__logo-image/_dark/footer__logo-image_dark.css);
-/* @media screen and (max-width: 1100px) {
 
-}
-@media screen and (max-width: 760px) {
-
-} */
 /* : Блок Меркс*/
 @import url(../blocks/merckx/merckx.css);
 @import url(../blocks/merckx/__image/merckx__image.css);
@@ -66,7 +61,7 @@
 @import url(../blocks/merckx/__quote/merckx__quote.css);
 @import url(../blocks/merckx/__name/merckx__name.css);
 @import url(../blocks/merckx/__sport/merckx__sport.css);
-
+/* ! модификаторы тёмной темы */
 @import url(../blocks/merckx/__quote/_dark/merckx__quote_dark.css);
 @import url(../blocks/merckx/__name/_dark/merckx__name_dark.css);
 @import url(../blocks/merckx/__sport/_dark/merckx__sport_dark.css);
@@ -76,333 +71,51 @@
 @import url(../blocks/training/__title/training__title.css);
 @import url(../blocks/training/__description/training__description.css);
 @import url(../blocks/training/__image/training__image.css);
-
+/* ! модификаторы тёмной темы */
 @import url(../blocks/training/__title/_dark/training__title_dark.css);
 @import url(../blocks/training/__description/_dark/training__description_dark.css);
+
+/* : Блок type */
+@import url(../blocks/type/type.css);
+@import url(../blocks/type/__line/type__line.css);
+@import url(../blocks/type/__card/type__card.css);
+@import url(../blocks/type/__title/type__title.css);
+@import url(../blocks/type/__description/type__description.css);
+@import url(../blocks/type/__image-1/type__image-1.css);
+@import url(../blocks/type/__image-2/type__image-2.css);
+@import url(../blocks/type/__gradient/_way/type__gradient_way.css);
+@import url(../blocks/type/__gradient/_gravel/type__gradient_gravel.css);
+@import url(../blocks/type/__gradient/_tt/type__gradient_tt.css);
+@import url(../blocks/type/__block-buttons/type__block-buttons.css);
+@import url(../blocks/type/__button/type__button.css);
+@import url(../blocks/type/__button/_left/type__button_left.css);
+@import url(../blocks/type/__button/_right/type__button_right.css);
+@import url(../blocks/type/__foto/_foto-1/type__foto_foto-1.css);
+@import url(../blocks/type/__foto/_foto-2/type__foto_foto-2.css);
+@import url(../blocks/type/__foto/_foto-3/type__foto_foto-3.css);
+/* ! модификаторы тёмной темы */
+@import url(../blocks/type/__title/_dark/type__title_dark.css);
+@import url(../blocks/type/__description/_dark/type__description_dark.css);
+@import url(../blocks/type/__block-buttons/_dark/type__block-buttons_dark.css);
+@import url(../blocks/type/__button/_left/_dark/type__button_left_dark.css);
+@import url(../blocks/type/__button/_right/_dark/type__button_right_dark.css);
+
+/* : Слайдер */
+@import url(../blocks/slider/slider.css);
+@import url(../blocks/slider/__conteiner/slider__conteiner.css);
+@import url(../blocks/slider/__item/slider__item.css);
+/* @media screen and (max-width: 1100px) {
+
+}
+@media screen and (max-width: 760px) {
+
+} */
 /*
 
 
 
 */
-.type {
-  border: 3px solid greenyellow;
-  max-width: 100%;
-  position: relative;
-}
-.type__line {
-  display: none;
-}
 
-@media screen and (max-width: 700px) {
-  .type__line {
-    display: block;
-    grid-area: 1/1/2/2;
-    border-top: 1px solid #e3e3e3;
-    margin: 40px 18px 0;
-  }
-}
-
-.wrapper {
-  margin-left: 120px;
-}
-
-@media screen and (max-width: 700px) {
-  .wrapper {
-    margin: 0 18px;
-  }
-}
-.slider-box {
-  max-width: 100%;
-  display: flex;
-  flex-wrap: nowrap;
-  scroll-behavior: smooth;
-  overflow: hidden;
-  -ms-overflow-style: none;
-  overflow-x: hidden;
-}
-.item {
-  flex-shrink: 0;
-}
-.type__slider {
-  /* border: 3px solid cyan; */
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 3;
-  column-gap: 20px;
-  margin: 0 0 0 0px;
-  width: 100%;
-}
-@media screen and (max-width: 700px) {
-  .type__slider {
-    grid-template-columns: 1fr;
-    grid-template-rows: 4;
-  }
-}
-
-.type__title {
-  grid-area: 1/1/2/2;
-  line-height: 60px;
-  font-size: 55px;
-  font-weight: 700;
-  font-style: normal;
-  color: #151515;
-  letter-spacing: -0.5px;
-  margin: 60px 0 50px;
-  transition: color 0.3s;
-}
-.type__title_dark {
-  color: #fff;
-  transition: all 0.3s;
-}
-
-@media screen and (max-width: 700px) {
-  .type__title {
-    grid-area: 1/1/2/2;
-    line-height: 40px;
-    font-size: 32px;
-    margin-top: 40px;
-  }
-}
-.type__description {
-  grid-area: 2/1/3/2;
-  max-width: 460px;
-  line-height: 28px;
-  font-size: 18px;
-  font-weight: 400;
-  font-style: normal;
-  color: #222;
-  opacity: 0.7;
-  margin-bottom: 80px;
-  transition: color 0.3s;
-}
-.type__description_dark {
-  color: #e5e5e5;
-  opacity: 0.7;
-  transition: color 0.3s;
-}
-@media screen and (max-width: 700px) {
-  .type__description {
-    grid-area: 4/1/5/2;
-
-    line-height: 18px;
-    font-size: 12px;
-    margin-bottom: 40px;
-    transition: color 0.3s;
-  }
-}
-.type__image-1 {
-  grid-area: 3/1/4/2;
-  padding: 0;
-  margin: 0 0 0 0px;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  max-width: 650px;
-  padding-bottom: 61.5%;
-}
-@media screen and (max-width: 700px) {
-  .type__image-1 {
-    grid-area: 3/1/4/2;
-    min-width: 284px;
-    padding-bottom: 61.5%;
-  }
-}
-
-.type__image-2 {
-  grid-area: 3/2/4/3;
-  padding: 0;
-  margin: 0;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  max-width: 650px;
-  padding-bottom: 61.5%;
-}
-@media screen and (max-width: 700px) {
-  .type__image-2 {
-    display: none;
-  }
-}
-.foto-1 {
-  background-image: url(../images/images-type/type_1.png);
-}
-.foto-2 {
-  background-image: url(../images/images-type/type_2.png);
-}
-.foto-3 {
-  background-image: url(../images/images-type/type_3.png);
-}
-.type__block-buttons {
-  margin: 50px 0 60px 120px;
-  max-width: 145px;
-}
-
-@media screen and (max-width: 700px) {
-  .type__block-buttons {
-    position: absolute;
-    margin: 0;
-    top: 67px;
-    right: 18px;
-    height: 50px;
-    padding-top: 30px;
-    border: 1px solid red;
-    background-color: #f4f4f4;
-  }
-}
-.type__block-buttons_dark {
-  background-color: #333;
-}
-.type__button {
-  margin-right: 20px;
-  width: 50px;
-  height: 50px;
-  border: none;
-  border-radius: 25px;
-  background-color: #ebebeb;
-  cursor: pointer;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-size: 7px 16px;
-  transition: all 0.3s;
-}
-.type__button:hover {
-  opacity: 0.6;
-}
-@media screen and (max-width: 700px) {
-  .type__button {
-    width: 28px;
-    height: 28px;
-    border-radius: 14px;
-    background-size: 5px 10px;
-  }
-}
-.type__button_left {
-  background-image: url(../images/images-button/slider_left.svg);
-  transition: all 0.3s;
-}
-.type__button_left_dark {
-  background-image: url(../images/images-button/slider_left_dark.svg);
-  background-color: #434343;
-  transition: all 0.3s;
-}
-.type__button_right {
-  background-image: url(../images/images-button/slider_right.svg);
-  transition: all 0.3s;
-}
-.type__button_right_dark {
-  background-image: url(../images/images-button/slider_right_dark.svg);
-  background-color: #434343;
-  transition: all 0.3s;
-}
-
-.type__gradient_way {
-  position: relative;
-  grid-area: 3/1/4/2;
-  width: 100px;
-  height: 40px;
-  background-image: url(../images/images-type/background.svg);
-  background-size: 100px 40px;
-  background-repeat: no-repeat;
-  align-self: end;
-  margin-bottom: 16px;
-}
-.type__gradient_way::before {
-  position: absolute;
-  top: 12px;
-  left: 16px;
-  content: "";
-  width: 50px;
-  height: 16px;
-  background: url(../images/images-type/way-highway.svg);
-  background-repeat: no-repeat;
-}
-
-@media screen and (max-width: 700px) {
-  .type__gradient_way {
-    background-size: 70px 28px;
-    grid-area: 3/1/4/2;
-    width: 70px;
-    height: 28px;
-  }
-  .type__gradient_way::before {
-    background-size: 35px 12px;
-    top: 8px;
-    left: 11px;
-  }
-}
-
-.type__gradient_gravel {
-  position: relative;
-  grid-area: 3/1/4/2;
-  width: 100px;
-  height: 40px;
-  background-image: url(../images/images-type/background.svg);
-  background-size: 100px 40px;
-  background-repeat: no-repeat;
-  align-self: end;
-  margin-bottom: 16px;
-}
-.type__gradient_gravel::before {
-  position: absolute;
-  top: 23px;
-  left: 16px;
-  content: "";
-  width: 50px;
-  height: 10px;
-  background: url(../images/images-type/way-gravel.svg);
-  /* background-size: 50px 5px; */
-  background-repeat: no-repeat;
-}
-
-@media screen and (max-width: 700px) {
-  .type__gradient_gravel {
-    background-size: 70px 28px;
-    grid-area: 3/1/4/2;
-    width: 70px;
-    height: 28px;
-  }
-  .type__gradient_gravel::before {
-    background-size: 35px 12px;
-    top: 12px;
-    left: 11px;
-  }
-}
-
-.type__gradient_tt {
-  position: relative;
-  grid-area: 3/1/4/2;
-  width: 100px;
-  height: 40px;
-  background-image: url(../images/images-type/background.svg);
-  background-size: 100px 40px;
-  background-repeat: no-repeat;
-  align-self: end;
-  margin-bottom: 16px;
-}
-.type__gradient_tt::before {
-  position: absolute;
-  top: 28px;
-  left: 16px;
-  content: "";
-  width: 50px;
-  height: 4px;
-  background: url(../images/images-type/way-tt.svg);
-  background-repeat: no-repeat;
-}
-
-@media screen and (max-width: 700px) {
-  .type__gradient_tt {
-    background-size: 70px 28px;
-    grid-area: 3/1/4/2;
-    width: 70px;
-    height: 28px;
-  }
-  .type__gradient_tt::before {
-    background-size: 30px 3px;
-    top: 18px;
-    left: 11px;
-  }
-}
 /*
 
 
